--- a/src/settings.yml
+++ b/src/settings.yml
@@ -1,15 +1,11 @@
-#
-# Changes to this file will be overwritten by `trmnlp pull`.
-#
-# Docs: https://help.usetrmnl.com/en/articles/10542599-importing-and-exporting-private-plugins#h_581fb988f0
-#
 ---
 strategy: webhook
-no_screen_padding: "no"
-dark_mode: "no"
-static_data: ""
+no_screen_padding: 'no'
+dark_mode: 'no'
+static_data: ''
 polling_verb: get
-polling_url: ""
-polling_headers: ""
+polling_url: ''
+polling_headers: ''
+id: 74331
 name: Postmark Incoming Feed
 refresh_interval: 1440
