--- a/trmnl/.trmnlp.yml
+++ b/trmnl/.trmnlp.yml
@@ -15,38 +15,38 @@ variables:
   messages:
     [
       {
-        "subject": "Quote of the day",
-        "message": "Be who you are and say what you feel, because those who mind don't matter, and those who matter don't mind.",
-        "time": "2025-05-22T17:41:57.000Z",
-        "sender_name": "Rockwell Schrock",
+        "body": "The stars predict tomorrow you'll wake up, do a bunch of stuff, and then go back to sleep.\n",
+        "time": "2025-05-27T17:51:17.000Z",
+        "subject": "Your horoscope for today",
+        "sender_name": "Miss Cleo",
         "sender_email": "rockwell@schrock.me",
       },
       {
-        "subject": "Hi honey",
-        "message": "Please don't forget to take out the trash <3",
-        "time": "2025-05-22T17:41:57.000Z",
-        "sender_name": "Rockwell Schrock",
-        "sender_email": "rockwell@schrock.me",
-      },
-      {
-        "subject": "Package tracking",
-        "message": "Your order #123456 has been delivered",
-        "time": "2025-05-22T17:41:57.000Z",
-        "sender_name": "Rockwell Schrock",
-        "sender_email": "rockwell@schrock.me",
-      },
-      {
+        "body": "Expect sunny skies with a high of 75°F.",
+        "time": "2025-05-27T17:53:31.000Z",
         "subject": "Today's weather",
-        "message": "Expect sunny skies with a high of 75°F",
-        "time": "2025-05-22T17:41:57.000Z",
-        "sender_name": "Rockwell Schrock",
+        "sender_name": "Jim Cantore",
         "sender_email": "rockwell@schrock.me",
       },
       {
-        "subject": "Your horoscope",
-        "message": "The stars predict tomorrow you'll wake up, do a bunch of stuff, and then go back to sleep",
-        "time": "2025-05-22T17:41:57.000Z",
-        "sender_name": "Rockwell Schrock",
+        "body": "Your order #123456 has been delivered.",
+        "time": "2025-05-27T17:53:51.000Z",
+        "subject": "Package tracking",
+        "sender_name": "Package Alerts",
+        "sender_email": "rockwell@schrock.me",
+      },
+      {
+        "body": "Please don't forget to take out the trash <3",
+        "time": "2025-05-27T17:54:07.000Z",
+        "subject": "Hi honey",
+        "sender_name": "Jessie",
+        "sender_email": "rockwell@schrock.me",
+      },
+      {
+        "body": "Be who you are and say what you feel, because those who mind don't matter, and those who matter don't mind.",
+        "time": "2025-05-27T14:37:54.000Z",
+        "subject": "Quote of the day",
+        "sender_name": "Theo Geisel",
         "sender_email": "rockwell@schrock.me",
       },
     ]
